fix overflow

--- a/about/about.css
+++ b/about/about.css
@@ -35,7 +35,7 @@
 .acc1_body {
   margin: 20px 0;
   height: 0;
-  overflow: scroll;
+  overflow-y: auto;
   padding-left: 30px;
 }
 .show {
