--- a/faqs/faq.css
+++ b/faqs/faq.css
@@ -37,7 +37,7 @@
   font-size: 24px;
   margin-top: 10px;
   height: 0;
-  overflow: scroll;
+  overflow-y: auto;
 }
 .acc2_body {
   width: 80%;
